--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -269,4 +269,10 @@
     font-size: 1.1em;
     /* slightly larger for thickness */
   }
+
+  @media (max-width: 1200px) {
+    .post-toc {
+      display: none;
+    }
+  }
 </style>
