--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -245,7 +245,7 @@
     color: var(--toc-text-color);
     text-decoration: none;
     display: block;
-    padding: 2px 0;
+    padding: 2px 4px;
     transition: color 0.2s;
   }
 
@@ -257,7 +257,7 @@
     background-color: var(--toc-active-bg);
     border-radius: 3px;
     padding: 2px 4px;
-    margin: -2px -4px;
+    /* margin: -2px -4px; */
   }
 
   .post-toc .active-toc::before {
